Ensure background images are always visible at full height

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -7,7 +7,7 @@ $header_nums: 0, 1, 2, 3, 4;
 @each $header_num in $header_nums {
   #startpage__start-teaser_#{$header_num} {
     background: image-url("header_#{$header_num}.png") no-repeat top center;
-    background-size: cover;
+    background-size: auto 100%;
 
     .hero-headline h1,h2 {
       // not $bg-color-white or $white as we need to match the hero header background color
